--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div id="score"  >Points: 0</div>
         <canvas id="play">
         </canvas>
-    </div>
-    <div class="flex-center">
-        <p>Hit enter to start the game</p>
+        <div id="dsc" class="flex-center">
+            <p>Hit enter to start the game</p>
+        </div>
     </div>
 
     <script src="domManipulation.js">
