--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
     </style>
     <div id="go-to-repo">
-        <a href="https://github.com/K-Wiczling/Snake/blob/master/index.html"><input type="button" id="go-button" value="Go to the repository" ></a>
+        <a href="https://github.com/K-Wiczling/Snake"><input type="button" id="go-button" value="Go to the repository" ></a>
     </div>
 
     <script src="domManipulation.js">
